# Goodhart

./: .env.example  .gitignore  CLAUDE.md  LEADERBOARD_PLAN.md  LOOP_DEMO_PLAN.md  LOOP_DEMO_PLAN_A_report.md  LOOP_DEMO_PLAN_B_siege.md  Makefile  PLAN.md  README.md  RESULTS.md  SPEC.md  golden_run.jsonl  pyproject.toml  settings.json
.claude/: settings.json
.claude/skills/review/: SKILL.md
.githooks/: pre-commit
dashboard/: index.html  leaderboard.html
examples/: hud_env_leaderboard.py
src/goodhart/: __init__.py  _sandbox_entry.py  flywheel.py  hud_adapter.py  pipeline.py  sandbox.py  suite.py
src/goodhart/agents/: _stubs.py  code_pressure.py  red.py  specialists.py
src/goodhart/baselines/: __init__.py  fuzzer.py  raw_llm.py
src/rampart/: __init__.py  _sandbox_entry.py  events.py  flywheel.py  hud_adapter.py  pipeline.py  sandbox.py  suite.py
tests/: test_agents_b0.py  test_baselines_extra.py  test_bench.py  test_bestofk.py  test_breadth.py  test_bus.py  test_capability_export.py  test_code_pressure.py  test_conductor.py  test_consequence.py  test_dashboard.py  test_escalate.py  test_eval.py  test_flywheel.py  test_foil_cheats.py  test_fuzzer.py  test_grader.py  test_green.py  test_hardening.py  test_harness.py  test_hud_adapter.py  test_integration_red_grader.py  test_leaderboard.py  test_leaderboard_export.py  test_metrics.py  test_oracle.py  test_pipeline.py  test_red_agent.py  test_red_rg.py  test_replay.py  test_rg_green.py  test_rollout.py  test_seams.py  test_specialists.py  test_submit.py  test_substrate.py  test_train.py
viz3d/: siege.html
(+113 files in other folders)
