[project]
name = "goodhart"
version = "0.1.0"
description = "An autoresearch loop that hardens RL verifiers against reward hacking."
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "evalplus>=0.3",
    "reasoning-gym>=0.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodhart"]
